--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ permalink:        pretty
 title:            Accelerator Projects 2019
 tagline:          'A UCLA DRC Joint'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://dawnchildress.com
-baseurl:          /hyde
+url:              
+baseurl:          /hyde/
 
 author:
   name:           'Mark Otto'
